--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,15 @@ button:focus-visible {
   border-color: #242424;
 }
 
+@media (max-width: 640px) {
+  /* sm: */
+  .btnTheme {
+    font-size: 0.6rem;     /* 16px */
+    padding: 0.75rem 2.25rem;
+  }
+}
+
+
 .box {
   border: 2px solid;
   border-image: linear-gradient(180deg, #9A420F -29.96%, #A03C22 -5.34%, #A24024 0.82%, #A94D2A 6.98%, #B66335 14.67%, #C78244 22.37%, #DDAA57 30.06%, #F8DA6E 37.76%, #FEE473 39.3%, #FEF1BA 50.07%, #FFF 59.31%, #FEF2B3 65.46%, #FDE978 70.08%, #FDE662 73.16%, #DCB854 77.78%, #B98846 83.93%, #9E613B 90.09%, #8B4633 96.24%, #7F352E 100.86%, #7B302D 103.94%, #9F420E 123.95%) 1;
