--- a/src/index.css
+++ b/src/index.css
@@ -111,6 +111,41 @@ button:focus-visible {
   z-index: 1;
 }
 
+
+.modalstyle {
+  position: relative;
+  display: inline-block;
+  padding: 0.70rem 2rem;
+  color: white;
+  font-weight: 600;
+  background: linear-gradient(45deg, #FF1D21, #B3090B);
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  z-index: 1;
+}
+
+.modalstyle::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  padding: 4px;
+  /* Border thickness */
+  border-radius: 50px;
+  background: linear-gradient(180deg, #9A420F -29.96%, #A03C22 -5.34%, #A24024 0.82%, #A94D2A 6.98%, #B66335 14.67%, #C78244 22.37%, #DDAA57 30.06%, #F8DA6E 37.76%, #FEE473 39.3%, #FEF1BA 50.07%, #FFF 59.31%, #FEF2B3 65.46%, #FDE978 70.08%, #FDE662 73.16%, #DCB854 77.78%, #B98846 83.93%, #9E613B 90.09%, #8B4633 96.24%, #7F352E 100.86%, #7B302D 103.94%, #9F420E 123.95%);
+  /* Image or gradient */
+  -webkit-mask:
+    linear-gradient(#fff 0 0) content-box,
+    linear-gradient(#fff 0 0);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
+  z-index: -1;
+}
+
+
+
+
+
 .btnTheme::before {
   content: "";
   position: absolute;
