--- a/src/index.css
+++ b/src/index.css
@@ -471,3 +471,46 @@ a {
     1px 1px 0 #ff1d1d,
     0px 0px 2px #ff1d1d;
 }
+
+@keyframes pulseScale {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.pulseScaleStyle {
+  width: 2rem;         /* Equivalent to Tailwind w-7 */
+  height: 2rem;        /* Equivalent to Tailwind h-7 */
+  color: #dc2626;         /* Tailwind text-red-600 */
+  cursor: pointer;
+  animation: pulseScale 1.5s ease-in-out infinite;
+}
+.card-bottom{
+  background: url(../public/images/red-svg.png) no-repeat;
+  padding: 15px 35px;
+}
+@media (max-width: 1280px) {
+  .card-bottom{
+   
+    background-size: 90% 100%;
+  }
+}
+@media (max-width: 767px) {
+  .card-bottom{
+    background-size:100%;
+    padding: 10px;
+    height: 150px;
+    width: 100%;
+    bottom: -57px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+  }
+}
